# ChiisanaURL

./: .gitignore  Cargo.toml  README.md  application.properties
.github/workflows/: ethicalcheck.yml  rust.yml
front/: index.htm
src/: bodies.rs  get_actions.rs  main.rs  post_actions.rs  properties_reader.rs  redis_handler.rs  requests.rs  response.rs  server.rs  socket_factory.rs  url_maker.rs
