[package]
name = "chiisana_url"
version = "0.0.1"
authors = ["Alvaro <alvaromello@PREFEITURA.SP.GOV.BR>"]
edition = "2018"
[dependencies]
rand = "0.8.5"
java-properties = "2.0.0"
warp = "0.3.5"
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"]  }
serde_derive = "1.0.186"
serde_json = "1.0.105"
once_cell = "1.18.0"
redis = "0.23.2"